--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "classnames": "^2.5.1",
     "next": "14.2.15",
     "prisma": "^5.21.1",
