--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "@radix-ui/themes": "^3.1.4",
     "classnames": "^2.5.1",
     "next": "14.2.15",
     "prisma": "^5.21.1",
