--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-markdown": "^9.0.1",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
