--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.4",
+    "@sentry/nextjs": "^8.37.1",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
